Settings Dialog showing implementation

--- a/ProbabilitySequencer/ProbabilitySequencer.rc
+++ b/ProbabilitySequencer/ProbabilitySequencer.rc
@@ -133,7 +133,7 @@ BEGIN
         MENUITEM "Load Session...",             0
         MENUITEM "Save Session...",             ID_FILE_SAVESESSION
     END
-    MENUITEM "Settings...",                 0
+    MENUITEM "Settings...",                 ID_SETTINGS
 END
 
 IDR_TRACK_EDITOR_MENU MENU 
@@ -175,7 +175,7 @@ BEGIN
 END
 
 IDD_PROBABILITYSEQUENCER_DIALOG DIALOGEX 0, 0, 321, 201
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_VSCROLL | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_VSCROLL | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Probability Sequencer"
 MENU IDR_INTERFACE_MENU
@@ -195,11 +195,11 @@ BEGIN
 END
 
 IDD_SETTINGS_DLG DIALOGEX 0, 0, 186, 62
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Settings"
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
-    PUSHBUTTON      "Done",IDCLOSE,72,47,50,14
+    PUSHBUTTON      "Done",IDOK,72,47,50,14
     CTEXT           "BPM",IDC_STATIC,7,8,23,8
     CTEXT           "Device",IDC_STATIC,7,24,22,8
     EDITTEXT        IDC_EDIT_BPM,37,6,140,14,ES_CENTER | ES_AUTOHSCROLL
