Added Track Edit dialog

--- a/ProbabilitySequencer/ProbabilitySequencer.rc
+++ b/ProbabilitySequencer/ProbabilitySequencer.rc
@@ -83,7 +83,7 @@ CAPTION "Dialog"
 MENU IDR_TRACK_EDITOR_MENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Œ ",IDCLOSE,259,7,50,14
+    DEFPUSHBUTTON   "Œ ",IDOK,259,7,50,14
     EDITTEXT        IDC_PATTERN_LENGTH,47,25,26,14,ES_AUTOHSCROLL
     LTEXT           "Length",IDC_STATIC,17,28,23,8
     EDITTEXT        IDC_STEP,115,26,26,14,ES_AUTOHSCROLL
@@ -203,7 +203,7 @@ BEGIN
     CTEXT           "BPM",IDC_STATIC,7,8,23,8
     CTEXT           "Device",IDC_STATIC,7,24,22,8
     EDITTEXT        IDC_EDIT_BPM,37,6,140,14,ES_CENTER | ES_AUTOHSCROLL
-    COMBOBOX        IDC_COMBO_DEVICE_SELECT,37,23,140,59,CBS_DROPDOWN | CBS_SORT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_DEVICE_SELECT,37,23,140,104,CBS_DROPDOWN | CBS_SORT | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
 END
 
 
